# Modelos-de-series-de-tiempo-Multivariadas

./: README.md  pyproject.toml
Codigos/: modelo_var_vec.ipynb  modelo_var_vec_v2_5.ipynb
Datos/: CPALTT01USQ657N.csv
